--- a/login.html
+++ b/login.html
@@ -4,7 +4,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="shortcut icon" href="assets/teregaloico.png"/>
     <link rel="stylesheet" href="style2.css">
+    
 </head>
 <body>
     <main>
@@ -14,8 +16,13 @@
                 <input type="text" class="ico-avatar" placeholder="User name" maxlength="18">
                 <input type="password" class="ico-lock" placeholder="Password" maxlength="18">
             </form>
-            <button class="btn">ENTRAR</button>
-            <a href="#">Crear nuevo usuario</a>
+            <button class="btn"> <a href="index.html">ENTRAR</a></button>
+            <div class="remember">
+                <input type="checkbox" id="remember" name="vehicle1" value="Bike">
+                <label for="remember">Recordar constraseña</label>
+            </div>   
+            <a href="register.html">Crear nuevo usuario</a>
+            
         </div>
     </main>
 </body>
