--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li><a href="#CONTACTO">CONTACTO</a></li>
         </ul>
         <nav class="navLogin">
-            <a class="register" href="login.html">REGISTER</a>
+            <a class="register" href="register.html">REGISTER</a>
             <button class="btn">
                 <a href="login.html">LOGIN</a>
             </button>
@@ -236,7 +236,7 @@
 				</label>
 
 				<label> Telefono
-					<input type="text" id="Telefono" placeholder="Ingresa tu telefono" maxlength="20">
+					<input type="number" id="Telefono" placeholder="Ingresa tu telefono" maxlength="20">
 				</label>
 			</article>
 
