--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- -----------------HEADER-------------- -->
 
-<header class="header">
+<header class="header" id="INICIO">
 
     <nav class="navBar">
         <a href="#">
